Fix overflow issue in Chrome

--- a/Heron.MudCalendar/Styles/Heron.MudCalendar.css
+++ b/Heron.MudCalendar/Styles/Heron.MudCalendar.css
@@ -46,7 +46,7 @@
   display: flex;
   justify-content: space-between;
   column-gap: 4px;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 .mud-calendar .mud-cal-toolbar .mud-button-label {
   white-space: nowrap;
